--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -32,3 +32,19 @@
     margin-top: 25px;
     margin-bottom: 25px;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
+
+.github {
+    font-size: 48px;
+    color: white;
+    margin-top: 5px;
+    margin-right: 25px;
+}
