--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,18 +1,27 @@
+.month-switcher, .month-switcher:hover {
+    color: #343a40;
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+
+.month-switcher-text {
+    position: relative;
+    bottom: 3px;
+}
+
 .caret-left {
     border-bottom: 8px solid transparent;
     border-top: 8px solid transparent;
-    border-right: 8px solid #ffffff;
+    border-right: 8px solid #343a40;
     display: inline-block;
-    margin-top: 4px;
     margin-right: 12px;
 }
 
 .caret-right {
     border-bottom: 8px solid transparent;
     border-top: 8px solid transparent;
-    border-left: 8px solid #ffffff;
+    border-left: 8px solid #343a40;
     display: inline-block;
-    margin-top: 4px;
     margin-left: 12px;
 }
 
@@ -47,4 +56,9 @@
     color: white;
     margin-top: 7px;
     margin-right: 25px;
+}
+
+a.card {
+    color: inherit;
+    text-decoration: none;
 }
